changes based on the output of FindBugs
git-svn-id: https://lwes.svn.sourceforge.net/svnroot/lwes/lwes-java/trunk@146 a2f82657-cdd2-4550-bd36-68a8e7111808